# lab2

./: README.md
c++/: .gitignore  CMakeLists.txt  Data.cpp  KnnAlgorithm.cpp  KnnAlgorithm.h  Main.cpp  Preprocessing.cpp  Preprocessing.h
report/: sprawozdanie2.tex
